# CPyMO-aarch64-linux

./: CMakeLists.txt
cpymo-backends/sdl2/: CMakeLists.txt
cpymo-tool/: cpymo_tool_convert.c
